Add changes to Equerest base test